--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,13 @@ body {
   background-color: #fafafa;
 }
 
+/* Serif font for headlines - newspaper style */
+.headline-font {
+  font-family: 'Merriweather', 'Georgia', 'Times New Roman', serif;
+  font-weight: 900;
+  letter-spacing: -0.02em;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -103,4 +110,14 @@ body {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
+}
+
+/* Hide scrollbar */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
